# Datalog-Reader-Application

./: CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.cpp  Header.h  Lexer.cpp  Lexer.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  interpreter.cpp  interpreter.h  main.cpp
