cmake_minimum_required(VERSION 3.16.3)
cmake_minimum_required(VERSION 3.16.3)
project(project5)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(project5
        Add.cpp
        Add.h
        Automaton.h
        ColonAutomaton.cpp
        ColonAutomaton.h
        ColonDashAutomaton.cpp
        ColonDashAutomaton.h
        Comma.cpp
        Comma.h
        Comment.cpp
        Comment.h
        Database.cpp
        Database.h
        DatalogProgram.cpp
        DatalogProgram.h
        Facts.cpp
        Facts.h
        Graph.cpp
        Graph.h
        Header.cpp
        Header.h
        ID.cpp
        ID.h
        interpreter.cpp
        interpreter.h
        Left_Paren.cpp
        Left_Paren.h
        Lexer.cpp
        Lexer.h
        main.cpp
        Multiply.cpp
        Multiply.h
        Parameter.cpp
        Parameter.h
        Parser.cpp
        Parser.h
        Period.cpp
        Period.h
        Predicate.cpp
        Predicate.h
        Q_Mark.cpp
        Q_Mark.h
        Queries.cpp
        Queries.h
        Relation.cpp
        Relation.h
        Right_Paren.cpp
        Right_Paren.h
        Rule.cpp
        Rule.h
        Rules.cpp
        Rules.h
        Schemes.cpp
        Schemes.h
        String.cpp
        String.h
        Token.cpp
        Token.h
        Tuple.cpp
        Tuple.h)
